style.css
/* ... */
/* update status */
#updatestatus {
  background-color: rgba(8, 48, 78, 0.9);
  border-bottom: 0;
  border-top: 1px solid #20A8B1;
  border-left: 1px solid #20A8B1;
  bottom: 0;
  color: #ffce00;
  font-size:13px;
  padding: 4px;
  position: fixed;
  right: 0;
  z-index:3002;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}


/* preview */

#largepreview {
  left: 50%;
  position: fixed;
  top: 50%;
  z-index: 2000;
}
#largepreview img {
  box-shadow: 0 0 40px #000;
}
#largepreview img {
  border: 2px solid #f8ff5e;
}

/* tooltips, dialogs */
.ui-tooltip, .ui-dialog {
  max-width: 300px;
  position: absolute;
  z-index: 9999;
  background-color: rgba(8, 48, 78, 0.9);
  border: 1px solid #20A8B1;
  color: #eee;
  font: 13px/15px "Helvetica Neue", Arial, Helvetica, sans-serif;
  padding: 2px 4px;
}

.ui-tooltip, .ui-dialog a {
  color: #FFCE00;
}

.ui-dialog {
  padding: 0;
  border-radius: 2px;
}

.ui-widget-overlay {
  height: 100%;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index:9998;
  background:  #444;
  opacity: 0.6;
}

.ui-dialog-titlebar {
  display: none;
}

.ui-dialog-content {
  padding: 12px;
  overflow-y: auto;
  overflow-x: hidden;
  max-height: 600px !important;
  max-width: 700px !important;
}

.ui-dialog-buttonpane {
  padding: 12px;
  border-top: 1px solid #20A8B1;
}

.ui-dialog-buttonset {
  text-align: right;
}

.ui-dialog-buttonset button,
.ui-dialog-content button {
  padding: 2px;
  min-width: 80px;
  color: #FFCE00;
  border: 1px solid #FFCE00;
  background-color: rgba(8, 48, 78, 0.9);
}

.ui-dialog-buttonset button:hover {
  text-decoration: underline;
}

td {
  padding: 0;
  vertical-align: top;
}

td + td {
  padding-left: 4px;
}

/* redeem results *****************************************************/
.redeem-result {
  font-size: 14px;
  font-family: arial,helvetica,sans-serif;
  table-layout: fixed;
}

.redeem-result tr > td:first-child {
  width: 50px;
  text-align: right;
}

